tests/baselines/reference/declarationEmitDefaultExport4.errors.txt
tests/cases/compiler/declarationEmitDefaultExport4.ts(1,1): error TS1148: Cannot compile external modules unless the '--module' flag is provided.


==== tests/cases/compiler/declarationEmitDefaultExport4.ts (1 errors) ====
    export default function () {
    ~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
        return 1;
    }